# api/src/controllers/router.js
@@ -272,8 +272,11 @@ router.get('/apporders', bodyParser(), async (ctx) => {
     chainId,
     app,
     dataset,
+    isDatasetStrict,
     workerpool,
+    isWorkerpoolStrict,
     requester,
+    isRequesterStrict,
     appOwner,
     minTag,
     maxTag,
@@ -290,8 +293,11 @@ router.get('/apporders', bodyParser(), async (ctx) => {
     }),
     appOwner: addressSchema(),
     dataset: addressOrAnySchema(),
+    isDatasetStrict: booleanSchema(),
     workerpool: addressOrAnySchema(),
+    isWorkerpoolStrict: booleanSchema(),
     requester: addressOrAnySchema(),
+    isRequesterStrict: booleanSchema(),
     minTag: bytes32Schema(),
     maxTag: bytes32Schema(),
     minVolume: positiveStrictIntSchema(),
@@ -303,8 +309,11 @@ router.get('/apporders', bodyParser(), async (ctx) => {
     chainId,
     app,
     dataset,
+    isDatasetStrict,
     workerpool,
+    isWorkerpoolStrict,
     requester,
+    isRequesterStrict,
     appOwner,
     minTag,
     maxTag,
